reformat SASS code

--- a/css/style.css
+++ b/css/style.css
@@ -29,50 +29,45 @@ body {
   /* Makes sure the img always stays at the top of the container */
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   /* clip-path is used to cut out a part of the image corner to get the 40 degree angle */ }
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem; }
-
-.header__logo {
-  height: 3.5rem; }
-
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* We use transform and translate to change x and Y axle so the logo
-  is centered in the middle of the parent element (parent element header) */
-  text-align: center; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* We use transform and translate to change x and Y axle so the logo
+    is centered in the middle of the parent element (parent element header) */
+    text-align: center; }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem; }
-
-.heading-primary--main {
-  /*span element is by default an inline element so we use display:block */
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-  animation-name: moveInLeft;
-  /* Name of the keyframe animation */
-  animation-duration: 1s;
-  /* the time that the animation will take */
-  animation-timing-function: ease-out;
-  /* animation-delay: 0.5s; waits before animation start */
-  /* animation-iteration-count: 3; sets how many times the animation should happen */ }
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.7rem;
-  animation: moveInRight 1s ease-out; }
+  .heading-primary--main {
+    /*span element is by default an inline element so we use display:block */
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation-name: moveInLeft;
+    /* Name of the keyframe animation */
+    animation-duration: 1s;
+    /* the time that the animation will take */
+    animation-timing-function: ease-out;
+    /* animation-delay: 0.5s; waits before animation start */
+    /* animation-iteration-count: 3; sets how many times the animation should happen */ }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.7rem;
+    animation: moveInRight 1s ease-out; }
 
 @keyframes moveInLeft {
   0% {
@@ -113,8 +108,7 @@ body {
     transform: translate(0);
     /* When we translate 0 it will look like it does right now */ } }
 
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -127,14 +121,19 @@ body {
 .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
 
 .btn:active {
   transform: translateY(-1px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
 
 .btn::after {
   content: "";
@@ -147,13 +146,6 @@ body {
   left: 0;
   z-index: -1;
   transition: all 0.4s; }
-
-.btn--white::after {
-  background-color: #fff; }
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
 
 .btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
