--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,10 @@
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
+
 $color-gray-dark: #777;
 $color-white: #fff;
+$color-black: #000;
 
 *,
 *::after,
@@ -45,28 +47,28 @@ body {
     100% 75vh,
     0 100%
   ); /* clip-path is used to cut out a part of the image corner to get the 40 degree angle */
-}
 
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-}
+  &__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+  }
 
-.header__logo {
-  height: 3.5rem;
-}
+  &__logo {
+    height: 3.5rem;
+  }
 
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(
-    -50%,
-    -50%
-  ); /* We use transform and translate to change x and Y axle so the logo
-  is centered in the middle of the parent element (parent element header) */
-  text-align: center;
+  &__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(
+      -50%,
+      -50%
+    ); /* We use transform and translate to change x and Y axle so the logo
+    is centered in the middle of the parent element (parent element header) */
+    text-align: center;
+  }
 }
 
 .heading-primary {
@@ -74,27 +76,27 @@ body {
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem;
-}
 
-.heading-primary--main {
-  /*span element is by default an inline element so we use display:block */
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-  animation-name: moveInLeft; /* Name of the keyframe animation */
-  animation-duration: 1s; /* the time that the animation will take */
-  animation-timing-function: ease-out;
-  /* animation-delay: 0.5s; waits before animation start */
-  /* animation-iteration-count: 3; sets how many times the animation should happen */
-}
+  &--main {
+    /*span element is by default an inline element so we use display:block */
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation-name: moveInLeft; /* Name of the keyframe animation */
+    animation-duration: 1s; /* the time that the animation will take */
+    animation-timing-function: ease-out;
+    /* animation-delay: 0.5s; waits before animation start */
+    /* animation-iteration-count: 3; sets how many times the animation should happen */
+  }
 
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.7rem;
-  animation: moveInRight 1s ease-out;
+  &--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.7rem;
+    animation: moveInRight 1s ease-out;
+  }
 }
 
 @keyframes moveInLeft {
@@ -151,56 +153,113 @@ body {
   }
 }
 
-.btn:link,
-.btn:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  border-radius: 10rem;
-  transition: all 0.2s;
-  position: relative;
-  font-size: 1.6rem;
+.btn {
+  &:link,
+  &:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all 0.2s;
+    position: relative;
+    font-size: 1.6rem;
+  }
+
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
+  }
+
+  &:active {
+    transform: translateY(-1px);
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+  }
+
+  &--white {
+    background-color: $color-white;
+    color: $color-gray-dark;
+
+    &::after {
+      background-color: $color-white;
+    }
+  }
+
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+
+  &--animated {
+    animation: moveInBottom 0.5s ease-out 0.75s;
+    animation-fill-mode: backwards;
+  }
 }
 
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-}
+// .btn:link,
+// .btn:visited {
+//   text-transform: uppercase;
+//   text-decoration: none;
+//   padding: 1.5rem 4rem;
+//   display: inline-block;
+//   border-radius: 10rem;
+//   transition: all 0.2s;
+//   position: relative;
+//   font-size: 1.6rem;
 
-.btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-}
+// }
 
-.btn-white {
-  background-color: $color-white;
-  color: $color-gray-dark;
-}
+// .btn:hover {
+//   transform: translateY(-3px);
+//   box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+// }
 
-.btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 10rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all 0.4s;
-}
+// .btn:active {
+//   transform: translateY(-1px);
+//   box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+// }
 
-.btn--white::after {
-  background-color: $color-white;
-}
+// .btn-white {
+//   background-color: $color-white;
+//   color: $color-gray-dark;
+// }
 
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
+// .btn::after {
+//   content: "";
+//   display: inline-block;
+//   height: 100%;
+//   width: 100%;
+//   border-radius: 10rem;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   z-index: -1;
+//   transition: all 0.4s;
+// }
 
-.btn--animated {
-  animation: moveInBottom 0.5s ease-out 0.75s;
-  animation-fill-mode: backwards;
-}
+// .btn--white::after {
+//   background-color: $color-white;
+// }
+
+// .btn:hover::after {
+//   transform: scaleX(1.4) scaleY(1.6);
+//   opacity: 0;
+// }
+
+// .btn--animated {
+//   animation: moveInBottom 0.5s ease-out 0.75s;
+//   animation-fill-mode: backwards;
+// }
