Refactoring SASS-code
fixed new folders and structured project better

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,265 +1,19 @@
-// Variables
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+// abstract-folder
+// @import "abstracts/functions";
+// @import "abstracts/mixins";
+@import "abstracts/variables";
 
-$color-gray-dark: #777;
-$color-white: #fff;
-$color-black: #000;
+// //base-folder
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+// @import "base/utilities";
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+// components-folder
+@import "components/button";
 
-html {
-  font-size: 62.5%;
-}
+// layout-folder
+@import "layout/header";
 
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  /* font-size: 16px; */
-  line-height: 1.7; /* line height is 1.7 times bigger than the normal one */
-  color: $color-gray-dark;
-  padding: 3rem;
-  box-sizing: border-box;
-}
-
-.header {
-  position: relative;
-  height: 95vh; /*vh is that the element should be 95% of the viewport height  */
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
-    ),
-    url(../img/hero.jpg);
-  background-size: cover; /* will always try to fit the element inside of the box */
-  background-position: top; /* Makes sure the img always stays at the top of the container */
-
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% 75vh,
-    0 100%
-  ); /* clip-path is used to cut out a part of the image corner to get the 40 degree angle */
-
-  &__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-  }
-
-  &__logo {
-    height: 3.5rem;
-  }
-
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(
-      -50%,
-      -50%
-    ); /* We use transform and translate to change x and Y axle so the logo
-    is centered in the middle of the parent element (parent element header) */
-    text-align: center;
-  }
-}
-
-.heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  margin-bottom: 6rem;
-
-  &--main {
-    /*span element is by default an inline element so we use display:block */
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInLeft; /* Name of the keyframe animation */
-    animation-duration: 1s; /* the time that the animation will take */
-    animation-timing-function: ease-out;
-    /* animation-delay: 0.5s; waits before animation start */
-    /* animation-iteration-count: 3; sets how many times the animation should happen */
-  }
-
-  &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.7rem;
-    animation: moveInRight 1s ease-out;
-  }
-}
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0; /* Makes element invisible at start*/
-    transform: translateX(-10rem);
-  }
-
-  80% {
-    transform: translateX(1rem);
-  }
-
-  100% {
-    opacity: 1; /* Makes element fully visible */
-    transform: translate(
-      0
-    ); /* When we translate 0 it will look like it does right now */
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0; /* Makes element invisible at start*/
-    transform: translateX(10rem);
-  }
-
-  80% {
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    opacity: 1; /* Makes element fully visible */
-    transform: translate(
-      0
-    ); /* When we translate 0 it will look like it does right now */
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0; /* Makes element invisible at start*/
-    transform: translateY(3rem);
-  }
-
-  80% {
-    transform: translateY(-0.5rem);
-  }
-
-  100% {
-    opacity: 1; /* Makes element fully visible */
-    transform: translate(
-      0
-    ); /* When we translate 0 it will look like it does right now */
-  }
-}
-
-.btn {
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all 0.2s;
-    position: relative;
-    font-size: 1.6rem;
-  }
-
-  &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    transform: translateY(-1px);
-    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-  }
-
-  &--white {
-    background-color: $color-white;
-    color: $color-gray-dark;
-
-    &::after {
-      background-color: $color-white;
-    }
-  }
-
-  &::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-
-  &--animated {
-    animation: moveInBottom 0.5s ease-out 0.75s;
-    animation-fill-mode: backwards;
-  }
-}
-
-// .btn:link,
-// .btn:visited {
-//   text-transform: uppercase;
-//   text-decoration: none;
-//   padding: 1.5rem 4rem;
-//   display: inline-block;
-//   border-radius: 10rem;
-//   transition: all 0.2s;
-//   position: relative;
-//   font-size: 1.6rem;
-
-// }
-
-// .btn:hover {
-//   transform: translateY(-3px);
-//   box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-// }
-
-// .btn:active {
-//   transform: translateY(-1px);
-//   box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-// }
-
-// .btn-white {
-//   background-color: $color-white;
-//   color: $color-gray-dark;
-// }
-
-// .btn::after {
-//   content: "";
-//   display: inline-block;
-//   height: 100%;
-//   width: 100%;
-//   border-radius: 10rem;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   z-index: -1;
-//   transition: all 0.4s;
-// }
-
-// .btn--white::after {
-//   background-color: $color-white;
-// }
-
-// .btn:hover::after {
-//   transform: scaleX(1.4) scaleY(1.6);
-//   opacity: 0;
-// }
-
-// .btn--animated {
-//   animation: moveInBottom 0.5s ease-out 0.75s;
-//   animation-fill-mode: backwards;
-// }
+// //pages-folder
+// @import "pages/home";
